# ai-applications

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: AWS_SETUP.md  MONGODB_SETUP.md
src/: __init__.py  business_prediction.py  chatbot.py  docu_chat.py
src/business_prediction/: __init__.py  main.py
src/chatbot/: __init__.py
src/docu_chat/: README.md  __init__.py  api.py  config.py  factory.py  interfaces.py  main.py  prompts.py
src/docu_chat/adapters/: __init__.py
src/docu_chat/adapters/database/: __init__.py  mongo_database.py
src/docu_chat/adapters/embeddings/: __init__.py  huggingface_embeddings.py
src/docu_chat/adapters/llm/: __init__.py  perplexity_llm.py
src/docu_chat/adapters/storage/: __init__.py  s3_storage.py
src/docu_chat_frontend/: README.md  __init__.py  api_client.py  main.py  ui_components.py
src/prediction_modules/: data_loader.py  model_training.py  predictions.py  preprocessing.py
